dark mode fix

--- a/bookworm/frontend/src/app/scrape-page/scrape-page.component.scss
+++ b/bookworm/frontend/src/app/scrape-page/scrape-page.component.scss
@@ -4,6 +4,7 @@
   align-items: center;
   height: 100vh;
   transition: background-color 0.5s ease, color 0.5s ease;
+  padding-bottom:100px;
 }
 
 .dark-mode{
