--- a/bookworm/frontend/src/styles.scss
+++ b/bookworm/frontend/src/styles.scss
@@ -3,5 +3,5 @@
 html, body { height: 100%; }
 
 body { background-color: white; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-body.dark-mode {background-color: rgb(53, 53, 53); margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body.dark-mode {background-color: rgb(35, 35, 35); margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
